serviceWorker para que funcione offline.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 	<script src="./grecha.js"></script>
 	<script src="./ros.js"></script>
+	<script src="./sw.js"></script>
 	
 	<div id="main"></div>
 	
