Agrego meta description.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<title>Santo Rosario</title>
 	<meta name="viewport" content="width=device-width" />
+	<meta name="description" content="Sitio web para rezar el Santo Rosario.">
+	<title>Santo Rosario</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
